<resources>
    <string name="app_name">Focus</string>
    <string name="app_id">411653219032604</string>
    <string name="action_settings">Settings</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="login_time_thief_text">揪出您的時間小偷！</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="pref_previously_started">false</string>
    <string name="user_gender">Male</string>
    <string name="user_birth">1995</string>
    <string name="user_occupation">Undergraduate</string>
    <string-array name="custom_weekdays">
        <item>日</item>
        <item>ㄧ</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="custom_months">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string name="intro_0">歡迎</string>
    <string name="intro_0_des">「您有手機上癮症嗎？」
根據Yahoo! Flurry Analytics(2015年)的統計，
全球有2.8億的用戶已經手機上癮。
Focus將是您最好的生產力工具。透過自我管理、好友的相互激勵，
讓低頭族改善使用智慧型裝置的習慣。</string>
    <string name="intro_1">跨裝置的用量報表</string>
    <string name="intro_1_des">「用量資料分析」讓您迅速認識自己的用量健康狀況。
Focus致力於成為您最好的「跨裝置用量監測平台」，藉此提升生產力。
以貼近使用者的角度出發，Focus整合所有裝置的用量報表，
從桌上型電腦到智慧型手機，提供資訊流的最佳體驗。</string>
    <string name="intro_2">「戳好友一下」與社群競賽</string>
    <string name="intro_2_des">好友間互相打氣，是本生產力工具的獨特功能。
藉由即時的好友提醒，Focus讓您有意識地提升生產力。
不僅如此，社群競賽讓好友與您的手機用量比較、進而排名。
您也可觀看全世界的用量平均，以及Focus為全世界省下多少時間。</string>
    <string name="intro_3">遠端監控與家長監護</string>
    <string name="intro_3_des">「時間警察」可短暫鎖屏委託人的手機畫面，達到小小警惕的效果。
您可委託最信任的 2 位摯友，成為您的時間警察；
不僅如此，針對 6-12 歲的孩童，Focus提供「家長監護」功能。
您可即時獲得孩童在學校的手機動態行為、進而規範使用時間與鎖屏。</string>
    <string name="device_accessibility">進入存取資料設定</string>
    <string name="device_accessibility_settings">可存取使用情形資料設定</string>
    <string name="account_permissions">帳號權限</string>
    <string name="reset_data">重設資料</string>
    <string name="delete_account">刪除帳號</string>
    <string name="title_canned_message_setting">罐頭訊息重設</string>
    <string name="emoji_reminder">＊使用表情符號（emoji）也可以哦！</string>
    <string name="canned_1">當你耍廢時，系統自動邀請朋友戳你</string>
    <string name="canned_2">戳一下朋友的訊息內容</string>
    <string name="canned_3">回覆朋友戳你的感謝訊息</string>
    <string name="title_activity_custom_dialog">朋友戳了你一下</string>
    <string name="app_usage_top_three">應用軟體用量前三名</string>
    <string name="back">退回</string>
    <string name="title_new_focus_mode">開始專注</string>
    <string name="friend_list_text">好友清單</string>
    <string name="usage_limit_today">今日使用上限</string>
    <string name="focus_reminder">FOCUS小提醒</string>
    <string name="description_addiction">根據Yahoo!的Flurry Report，本應用軟體將定義上癮程度如下（單位為點擊應用軟體次數/天）</string>
    <string name="done">完成</string>
    <string name="title_help_police">什麼是時間警察？</string>
    <string name="intro_time_police">一般的「好友關係」可以即時戳朋友一下，而升級權限後的「時間警察」可以短暫鎖屏委託人的手機畫面，達到小小警惕的效果。
您可委託最信任的 2 位好友，成為您的時間警察。</string>
    <string name="title_help_thief">什麼是時間小偷？</string>
    <string name="intro_time_thief">時間小偷將偷走您的時間，擾亂您一整天的時間管理。本軟體將透過客製化的手機用量分析，讓您了解「失去的時間花在哪裡？」。
    </string>
    <string name="descrpition_conti_total_used">某應用軟體連續使用時間超過：</string>
    <string name="excluded_app">排除在外應用軟體</string>
    <string name="exclude_example">Ex: 電話、LAUNCHER、上班需要的應用程式...等</string>
    <string name="modify">修改</string>
    <string name="is_your_friend">是您的好友。</string>
    <string name="upgrade_permissions">升級權限</string>
    <string name="lock_your_friend">鎖住他！</string>
    <string name="lock_time_upper_bound">鎖定時間長度上限</string>
    <string name="lock_settings">鎖屏功能設定</string>
    <string name="cancel">取消</string>
    <string name="main_title_dashboard">資訊主頁</string>
    <string name="main_title_add_friend">好友邀請</string>
    <string name="main_title_message">訊息</string>
    <string name="main_title_overview">總覽</string>
    <string name="main_title_more">更多</string>
    <string name="modify_permission_text">修改權限</string>
    <string name="relation_both">是您的時間警察與委託人。</string>
    <string name="relation_is_your_tp">是您的時間警察。</string>
    <string name="relation_you_are_tp">是您的委託人。</string>
    <string name="relation_just_friend">是您的好友。</string>
    <string name="notif_descrpition">好友耍廢時，您可收到他的即時推播。</string>
    <string name="time_locked_description">時間警察所擁有的權限：\n您耍廢時，時間警察可對您即時鎖屏。</string>
    <string name="time_lock_description">您所擁有的時間警察權限：\n委託人耍廢時，您可對委託人即時鎖屏。</string>
    <string name="daily_report_settings">每日報表設定</string>
    <string name="daily_report_notif">每日報表推播</string>
    <string name="notif_time">通知時間</string>
    <string name="notif_way">通知方式</string>
    <string name="sound">聲音</string>
    <string name="vibrate">震動</string>
    <string name="message_display">訊息顯示</string>
    <string name="while_screen_is_on">螢幕開啟時</string>
    <string name="while_screen_is_off">螢幕關閉時</string>
    <string name="radar_chart_result_text">測驗結果：您是一個社交狂人！（每日平均使用手機 2 小時以上，社群類應用軟體佔總時間80%）</string>
    <string name="reject">拒絕</string>
    <string name="settings">設定</string>
    <string name="addiction_advice">本週有 3 天達到重度上癮、以及 2 天達到中度上癮，提醒您、讓眼睛多休息！</string>
    <string name="exceed_limit_usage">超過目標用量 (天)</string>
    <string name="total_usage_hour">使用總時數 (小時)</string>
    <string name="points">Points</string>
    <string name="comments"> 則留言</string>
    <string name="mobile_addiction_index">手機上癮指標</string>
    <string name="addict_0">健康</string>
    <string name="addict_1">輕微</string>
    <string name="addict_2">中度</string>
    <string name="addict_3">嚴重</string>
    <string name="today_total_usage_text">已使用時間</string>
    <string name="dashboard_reminder">您有點太沈迷於手機囉！\n去外面走走吧！</string>
    <string name="addict_remind_0">健康的用量讓時間管理更好，\n祝您有個愉快的一天！</string>
    <string name="addict_remind_1">表現不錯、但要小心哦。\n繼續維持吧！</string>
    <string name="addict_remind_2">您太沈迷於手機囉！\n去外面走走吧！</string>
    <string name="addict_remind_3">噢不，您今日已達手機上癮標準。\n明天請繼續加油！</string>
    <string name="reset">重設</string>
    <string name="view_your_profile">查看你的個人檔案</string>
    <string name="title_focus_mode">專注模式</string>
    <string name="title_goal_setting">目標設定</string>
    <string name="title_idle_setting">耍廢條件設定</string>
    <string name="title_lock_setting">鎖屏功能設定</string>
    <string name="title_notif_setting">通知設定</string>
    <string name="title_focus_community">FOCUS發燒友</string>
    <string name="title_parental_control">家長監護</string>
    <string name="title_advanced_setting">進階設定</string>
    <string name="title_logout">登出</string>
    <string name="title_ads_overview">這是廣告</string>
    <string name="title_weekly_app_usage_overview">每週總時數趨勢</string>
    <string name="title_daily_app_usage_overview">每日使用時段趨勢</string>
    <string name="title_addiction_index_overview">上癮程度趨勢</string>
    <string name="title_top_three_app_usage_overview">前三應用軟體使用趨勢</string>
    <string name="title_app_leader_board_overview">應用程式排行榜</string>
    <string name="title_my_daily_report_overview">我的每日報表</string>
    <string name="title_my_radar_chart_overview">個人特質雷達圖</string>
    <string name="title_my_piggy_bank_overview">我的時間存錢筒</string>
    <string name="focus_saved_for_globe">FOCUS已經為全世界省下的總時數（小時）</string>
    <string name="trans_rate">等值轉換比率（相當於）</string>
    <string name="focus_saved_total">FOCUS總共已經為您省下（小時）</string>
    <string name="pr">全球百分等級(Percentile Rank)</string>
    <string name="your_rank">位 FOCUS 使用者中，您是第</string>
    <string name="rank_text">名</string>
    <string name="focus_saved_for_weekly">本週目前累計時數</string>
    <string name="single_day_indivi_usage">單日分別累計時數</string>
    <string name="send_you_friend_request">寄了好友邀請給您。</string>
    <string name="accept">確認</string>
    <string name="become_your_friend">已經成為您的好友。</string>
    <string name="understand">知道了</string>
    <string name="already_signed_up">已經註冊、但尚未建立關係。</string>
    <string name="send_invitation">寄出邀請</string>
    <string name="wait_for_reply">等待回覆</string>
    <string name="unit_book">閱讀這麼多數量的書（本）</string>
    <string name="unit_soccer">足球賽的賽事時間長度（場）</string>
    <string name="unit_basketball">籃球賽的賽事時間長度（場）</string>
    <string name="unit_workout">上健身房鍛鍊身體（次）</string>
    <string name="unit_jogging">在附近的公園路跑（次）</string>
    <string name="unit_diet">做一套完整的瘦身操（次）</string>
    <string name="unit_movie">看一場新上映的電影（次）</string>
    <string name="title_kick_messages">戳朋友一下</string>
    <string name="kick_action_reply">回覆</string>
    <string name="kick_action">戳</string>
    <string name="kick_action_response">知道了</string>
    <string name="profile_birth_text">出生年份</string>
    <string name="profile_friend_num_text">好友總數</string>
    <string name="profile_total_time_saved_text">省下總小時數</string>
    <string name="profile_click_modify">點擊以修改</string>
    <string name="description_access">授權背景偵測</string>
    <string name="access_intro">為了獲取應用軟體使用頻率，\n本應用軟體希望能和您要求背景偵測之權限。\n
        確認背景偵測已經開啟後，請回到頁面，點選下一步。</string>
    <string name="email_hint">請輸入您的電子信箱</string>
    <string name="email_helper_text">無效的信箱將造成註冊失敗，請仔細填寫。</string>
    <string name="title_goal">什麼是目標？</string>
    <string
        name="goal_intro">您總希望撥出時間慢跑、健身、減肥，或只是讀一本好書，卻總是感嘆時間不足嗎？本軟體希望您能訂定個人「目標」，此目標將出現於許多分析圖表中，方便您每日檢視自己的表現。
    </string>
    <string name="goal_reminder">建議您，單日手機用量不要超過兩小時，\n否則對於您的時間管理\n與眼睛健康狀況都有不良影響哦！</string>
    <string name="intro_basic">填寫正確的基本資料，\n有助於本團隊提供您客製化的精緻分析報表。</string>
    <string name="set_explore_focus">恭喜您完成設定！歡迎您探索Focus，找回失去的專注！</string>
    <string name="basic_info_settings">基本資料設定</string>
    <string name="lock_friend_to_self">允許時間警察鎖住您的屏幕</string>
    <string name="lock_never">禁止時間警察鎖住您的屏幕</string>
    <string name="time_police_invite">委託您成為他的時間警察。</string>
    <string name="time_police_inviting">已委託好友成為您的時間警察。</string>
    <string name="time_police_reply">已經成為您的時間警察。</string>
    <string name="time_police_roger_that">知道了</string>
    <string name="time_police_locked">已經撤回您的時間警察權限。</string>
    <string name="time_police_lock">已經放棄他的時間警察權限。</string>
</resources>