<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary_dark"
              android:id="@+id/main">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="32dp"
        android:textColor="#ffffff"
        android:padding="32dp"
        android:textSize="26sp"
        android:text="@string/basic_info_settings"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/avatar_social"
            android:id="@+id/imageView3"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:text="@string/user_birth"/>
            <Button
                android:id="@+id/button_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:text="@string/user_gender"/>
            <Button
                android:id="@+id/button_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:text="@string/user_occupation"/>

        </LinearLayout>
    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textSize="24sp"
        android:text="stayfocuseddots@gmail.com"
        android:layout_margin="10dp"
        app:met_floatingLabel="highlight"
        app:met_textColor="@color/white"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true"
        app:met_helperText="@string/email_helper_text"
        app:met_helperTextAlwaysShown="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/intro_basic"
        android:textColor="@color/semi_white"
        android:gravity="center_horizontal"
        android:maxWidth="200dp"
        android:id="@+id/textView3"/>

</LinearLayout>