<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_report_settings"
        android:layout_margin="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_report_notif"
            android:layout_margin="10dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/switch1"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notif_time"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/noti_time_textview"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notif_way"
        android:layout_margin="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:layout_margin="10dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/switch2"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:layout_margin="10dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/switch3"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_display"
        android:layout_margin="15dp"/>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/while_screen_is_on"
        android:layout_margin="10dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/switch4"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/while_screen_is_off"
            android:layout_margin="10dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/switch5"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    
</LinearLayout>
